--- a/app/design/frontend/base/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view.phtml
@@ -56,7 +56,7 @@
 
                 <?php if ($_product->getShortDescription()):?>
                     <div class="short-description">
-                        <div class="std"><?= $_helper->productAttribute($_product, nl2br($_product->getShortDescription()), 'short_description') ?></div>
+                        <div class="std"><?= $_helper->productAttribute($_product, $_product->getShortDescription(), 'short_description') ?></div>
                     </div>
                 <?php endif ?>
 
