--- a/public/js/mage/adminhtml/wysiwyg/tiptap/tiptap.css
+++ b/public/js/mage/adminhtml/wysiwyg/tiptap/tiptap.css
@@ -646,7 +646,6 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    gap: 20px;
 }
 
 .slideshow-editor .slideshow-preview {
@@ -748,12 +747,16 @@
     height: 20px;
 }
 
+.slideshow-editor .slideshow-actions {
+    display: flex;
+    justify-content: end;
+}
+
 .slideshow-editor .add-slide-btn {
-    padding: 10px 20px;
+    padding: 0 13px;
     background: #3b82f6;
     color: white;
     border: none;
-    border-radius: 4px;
     cursor: pointer;
     font-size: 14px;
 }
