--- a/public/skin/frontend/base/default/css/styles.css
+++ b/public/skin/frontend/base/default/css/styles.css
@@ -6290,7 +6290,7 @@ div.paypal-logo span > img {
   margin: 0;
 }
 
-.slideshow ul li a img {
+.slideshow ul li img {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
