--- a/app/design/adminhtml/default/default/template/sales/order/pdf/shipment/items/default.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/pdf/shipment/items/default.phtml
@@ -5,10 +5,9 @@
  * @package    Mage_Sales
  * @copyright  Copyright (c) 2025 Maho (https://mahocommerce.com)
  * @license    https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
- *
- * @var $this Mage_Sales_Model_Order_Pdf_Items_Shipment_Default
  */
 
+/** @var Mage_Sales_Model_Order_Pdf_Items_Shipment_Default $this */
 $item = $this->getItem();
 ?>
 
