--- a/app/design/adminhtml/default/default/template/usa/dhl/label.phtml
+++ b/app/design/adminhtml/default/default/template/usa/dhl/label.phtml
@@ -1,4 +1,13 @@
 <?php
+
+/**
+ * Maho
+ *
+ * @package    Mage_Usa
+ * @copyright  Copyright (c) 2025 Maho (https://mahocommerce.com)
+ * @license    https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
+ */
+
 /**
  * DHL Shipping Label Template
  * @var Mage_Usa_Model_Shipping_Carrier_Dhl_Label_Pdf $this
