--- a/app/design/adminhtml/default/default/template/widget/grid.phtml
+++ b/app/design/adminhtml/default/default/template/widget/grid.phtml
@@ -4,16 +4,12 @@
  *
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
- * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
+ * @copyright   Copyright (c) 2021-2025 The OpenMage Contributors (https://openmage.org)
  * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
-/**
- * Template for Mage_Adminhtml_Block_Widget_Grid
- *
- * @var Mage_Adminhtml_Block_Widget_Grid $this
- */
+/** @var Mage_Adminhtml_Block_Widget_Grid $this */
 $numColumns = count($this->getColumns());
 ?>
 <?php if($this->getCollection()): ?>
@@ -149,7 +145,7 @@ $numColumns = count($this->getColumns());
 
             <?php endforeach ?>
             </tr>
-            <?php if ($_multipleRows = $this->getMultipleRows($_item)):?>
+            <?php if (is_iterable($_multipleRows = $this->getMultipleRows($_item))):?>
                 <?php foreach ($_multipleRows as $_i):?>
                 <tr>
                     <?php $i=0;foreach ($this->getMultipleRowColumns($_i) as $_column): ?>
