--- a/app/design/frontend/base/default/template/catalog/product/view/description.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/description.phtml
@@ -5,20 +5,14 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
-/**
- * Product description template
- *
- * @see Mage_Catalog_Block_Product_View_Description
- * @var Mage_Catalog_Block_Product_View_Description $this 
- */
+/** @var Mage_Catalog_Block_Product_View_Description */
 ?>
 <?php $_description = $this->getProduct()->getDescription(); ?>
 <?php if ($_description): ?>
-    <h2><?= $this->__('Details') ?></h2>
     <div class="std">
         <?= $this->helper('catalog/output')->productAttribute($this->getProduct(), $_description, 'description') ?>
     </div>
