--- a/app/design/frontend/base/default/template/catalog/product/list/toolbar.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/list/toolbar.phtml
@@ -12,7 +12,9 @@
 /** @var Mage_Catalog_Block_Product_List_Toolbar $this */
 ?>
 <?php if($this->getCollection()->getSize()): ?>
+<input type="checkbox" id="filters-toggle" class="filters-toggle">
 <div class="toolbar">
+    <label for="filters-toggle" class="filters-trigger">Filters</label>
     <?php if( $this->isExpanded() ): ?>
         <div class="sorter">
             <div class="sort-by">
@@ -84,5 +86,14 @@
         <?= $this->getPagerHtml() ?>
 
     </div>
+</div>
+
+<!-- Offcanvas filters overlay and sidebar -->
+<div class="filters-overlay">
+    <label for="filters-toggle"></label>
+</div>
+<div class="filters-offcanvas">
+    <label for="filters-toggle" class="filters-close">&times;</label>
+    <!-- Content will be moved here by JavaScript -->
 </div>
 <?php endif ?>
