--- a/app/design/frontend/base/default/template/customer/account/navigation.phtml
+++ b/app/design/frontend/base/default/template/customer/account/navigation.phtml
@@ -13,7 +13,7 @@
 ?>
 <div class="block block-account">
     <div class="block-title">
-        <strong><span><?= $this->__('My Account') ?></span></strong>
+        <strong><label for="sidebar-toggle" class="sidebar-trigger-label"><span><?= $this->__('My Account') ?></span></label></strong>
     </div>
     <div class="block-content">
         <ul>
