--- a/app/design/frontend/base/default/layout/customer.xml
+++ b/app/design/frontend/base/default/layout/customer.xml
@@ -212,6 +212,9 @@ Customer account pages, rendered for all tabs in dashboard
         </reference>
 
         <reference name="content">
+            <!-- Offcanvas sidebar toggle for mobile -->
+            <block type="core/template" name="sidebar.offcanvas.toggle" template="customer/account/sidebar-toggle.phtml" before="-"/>
+            
             <block type="page/html_wrapper" name="my.account.wrapper" translate="label">
                 <label>My Account Wrapper</label>
                 <action method="setElementClass"><value>my-account</value></action>
