--- a/app/design/frontend/base/default/layout/page.xml
+++ b/app/design/frontend/base/default/layout/page.xml
@@ -83,6 +83,8 @@
 
             <block type="core/text_list" name="content" as="content" translate="label">
                 <label>Main Content Area</label>
+                <!-- Offcanvas sidebar toggle for all pages -->
+                <block type="core/template" name="sidebar.offcanvas.toggle" template="customer/account/sidebar-toggle.phtml" before="-"/>
             </block>
 
             <block type="core/text_list" name="right" as="right" translate="label">
