--- a/app/design/frontend/base/default/template/page/html/header.phtml
+++ b/app/design/frontend/base/default/template/page/html/header.phtml
@@ -14,7 +14,7 @@
 <header id="header" class="page-header" role="banner">
     <div class="page-header-container skip-links">
         <div>
-            <a href="#header-nav" class="skip-link skip-nav" data-target-element="header-nav" title="<?= $this->__('Menu') ?>">
+            <a href="#header-nav" class="skip-link skip-nav sidebar-trigger" title="<?= $this->__('Menu') ?>">
                 <?= $this->getIconSvg('menu-2') ?>
                 <span class="label"><?= $this->__('Menu') ?></span>
             </a>
